--- a/cufflink/WebContent/css/cuffLink.css
+++ b/cufflink/WebContent/css/cuffLink.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 .wrap {
-	background-image: url("./image/배너.png");
+	background-image: url("./img/배너.png");
 	height: 400px;
 	background-position: center; /* Center the image */
 	background-repeat: no-repeat; /* Do not repeat the image */
@@ -73,6 +73,10 @@ hr.dotted {
 
 .basicspace {
 	padding:10px;
+}
+
+.mainspace {
+	padding:5px;
 }
 	
 .center {
